gutter-sales-assist/main/default/objects/CalloutLog__c/CalloutLog__c.object-meta.xml
<CustomObject>
    <description>Logs response from various HTTP requests.</description>
    <label>CalloutLog</label>
    <nameField>
        <label>CalloutLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalloutLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>