gutter-sales-assist/main/default/objects/CalloutLog__c/fields/RequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>RequestDateTime__c</fullName>
    <description>Date/Time request was made.</description>
    <label>RequestDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>