gutter-sales-assist/main/default/objects/CalloutLog__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <description>The HTTP response body.</description>
    <label>ResponseBody</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>