gutter-sales-assist/main/default/objects/CalloutLog__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>HTTP response status code.</description>
    <label>StatusCode</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>